--- a/public/landing.html
+++ b/public/landing.html
@@ -1,3 +1,46 @@
-<h1>A very simple random picker Slack app.</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <title>Privacy Policy</title>
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/assets/css/live.min.css" rel="stylesheet" />
 
-<p>If you don't have trust issues, then this thing's not for you baby.</p>
+    <meta name="robots" content="noindex" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="page">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Randomly</h1>
+              <p>
+                An easy to use random user picker for your Slack workspace.
+              </p>
+              <p>
+                <a
+                  href="https://slack.com/oauth/v2/authorize?client_id=533729012180.1068409833301&scope=channels:read,chat:write,commands,groups:read,users:read"
+                  ><img
+                    alt="Add to Slack"
+                    height="40"
+                    width="139"
+                    src="https://platform.slack-edge.com/img/add_to_slack.png"
+                    srcset="
+                      https://platform.slack-edge.com/img/add_to_slack.png    1x,
+                      https://platform.slack-edge.com/img/add_to_slack@2x.png 2x
+                    "
+                /></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
